# rk_recognition

./: .gitignore  CMakeLists.txt  build.sh  run.sh
config/: rtsp___172.16.12.9_554_rtp_13042500082003001002_13042500081322002001_originTypeStr_rtp_push_img.txt  rtsp___172.16.12.9_554_rtp_13042500082003001002_13042500081322002002_originTypeStr_rtp_push_img.txt  rtsp___172.16.12.9_554_rtp_13042500082003001002_13042500081322002003_originTypeStr_rtp_push_img.txt  rtsp___172.16.12.9_554_rtp_13042500082003001002_13042500081322002005_originTypeStr_rtp_push_img.txt  rtsp___172.16.12.9_554_rtp_13042500082003001002_13042500081322002006_originTypeStr_rtp_push_img.txt  rtsp___172.16.12.9_554_rtp_13042500082003001002_13042500081322002008_originTypeStr_rtp_push_img.txt  rtsp___172.16.12.9_554_rtp_13042500082003001002_13042500081322002019_originTypeStr_rtp_push_img.txt  rtsp___172.16.12.9_554_rtp_13042500082003001002_13042500081322002020_originTypeStr_rtp_push_img.txt  rtsp___172.16.12.9_554_rtp_13042500082003001002_13042500081322002021_originTypeStr_rtp_push_img.txt  rtsp___172.16.12.9_554_rtp_13042500082003001002_13042500081322002022_originTypeStr_rtp_push_img.txt  rtsp___172.16.12.9_554_rtp_13042500082003001002_13042500081322002025_originTypeStr_rtp_push_img.txt  rtsp___172.16.12.9_554_rtp_13042500082003001002_13042500081322002028_originTypeStr_rtp_push_img.txt  rtsp___172.16.12.9_554_rtp_13042500082003001002_13042500081322002055_originTypeStr_rtp_push_img.txt  rtsp___admin_hik12345_192.168.10.151_554_Streaming_Channels_101_img.txt
lib/: libaom.so.0  libopencv_calib3d.so.4.5.0  libopencv_features2d.so.4.5.0  libopencv_flann.so.4.5.0  libopencv_gapi.so.4.5.0  libopencv_highgui.so.4.5.0  libopencv_imgcodecs.so.4.5.0  libopencv_ml.so.4.5.0  libopencv_photo.so.4.5.0  (+4 more)
(+30 files in other folders)
